--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "scripts/utility/The-NERD-tree"]
 	path = scripts/utility/The-NERD-tree
 	url = http://github.com/vim-scripts/The-NERD-tree.git
+[submodule "scripts/syntax/JavaScript-syntax"]
+	path = scripts/syntax/JavaScript-syntax
+	url = https://github.com/vim-scripts/JavaScript-syntax
