added vim-coffee-script plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "scripts/utility/extradite.vim"]
 	path = scripts/utility/extradite.vim
 	url = https://github.com/vim-scripts/extradite.vim
+[submodule "scripts/utility/vim-coffee-script"]
+	path = scripts/utility/vim-coffee-script
+	url = https://github.com/vim-scripts/vim-coffee-script
