--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "scripts/utility/vim-coffee-script"]
 	path = scripts/utility/vim-coffee-script
 	url = https://github.com/vim-scripts/vim-coffee-script
+[submodule "scripts/utility/DrawIt"]
+	path = scripts/utility/DrawIt
+	url = https://github.com/vim-scripts/DrawIt
