--- a/.gitmodules
+++ b/.gitmodules
@@ -100,3 +100,6 @@
 [submodule "scripts/utility/gist-vim"]
 	path = scripts/utility/gist-vim
 	url = git://github.com/mattn/gist-vim.git
+[submodule "scripts/syntax/Handlebars"]
+	path = scripts/syntax/Handlebars
+	url = https://github.com/vim-scripts/Handlebars.git
